tbalimentos não edita img

--- a/back end/gulaonline/index.html
+++ b/back end/gulaonline/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta http-equiv="refresh" content="0; URL='./view/html/gulaonline.html'" />
+	<meta http-equiv="refresh" content="0; URL='./view/tbcadastro/cadastro.html'" />
 </head>
 
 </html>
